<resources>
    <string name="app_name">Afbraiding App</string>
    <string name="braid">AfBraids</string>
    <string name="for_braiders">for braiders</string>
    <string name="code">+421</string>
    <string name="number">Phone Number</string>
    <string name="message">Please enter your mobile number. We will send you a verification message to confirm your account</string>
    <string name="verify_enter_code_sent_to">Please enter the 4 digit verification code that was sent to +421 555 89 39 54.</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number_hint">555 8939 5467</string>
    <string name="profile">Add Profile Picture</string>
    <string name="create_account_title">Create Account</string>
    <string name="back">Back</string>
    <string name="tv">By tapping "Next", you agree with our Terms of Service and Privacy Policy</string>
    <string name="didnt_get_code_sms">I did not get SMS with verification code Re-Enter SMS</string>
    <string name="tv3">Code is uncorrect. Try it again</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="verify_mobile_phone">Verify mobile number</string>
    <string name="lets_go">Lets Go!</string>
    <string name="my_name">My name</string>
    <string name="email">Email</string>
    <string name="tap">Tap here to add photo</string>
    <string name="congratulation">Congratulations!</string>
    <string name="success">You were successfully registered in AfBraid App as a braider hairstylist!</string>
    <string name="order">Orders</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This week</string>
    <string name="clock">9:15 AM</string>
    <string name="day">Jun 18, 2020</string>
    <string name="street">75 Park Place 8th floor, New York NY</string>
    <string name="man">Claudia Smith</string>
    <string name="orders">Orders</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="prof">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="verification">Verification</string>

    <string name="add_photo">Add Photo</string>
    <string name="dialog_action_ok">OK</string>

    <string name="my_calendar">My Calendar</string>

    <string name="cancel_the_order">Cancel the Order?</string>
    <string name="cancel_the_order_confirm">Are you sure that you want to cancel this order? Your rate will be downgraded by 1 star</string>
    <string name="no">No</string>
    <string name="yes_cancel">Yes, cancel</string>

    <string name="some_words_about_you">Some words about you</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="invalid_number">Invalid number</string>
    <string name="email_invalid">Email is INVALID.</string>

    <string name="order_details">Order Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="short_descr">Short Style Description</string>
    <string name="address">Address</string>
    <string name="map">Map</string>
    <string name="accept_order">Make an Order</string>
    <string name="phone_number">Phone number</string>

    <string name="cancel_order">Cancel order</string>
    <string name="call_client">Call client</string>
    <string name="congratulations">Congratulations!\nClaudia Smith, your request is  accepted.  7:00 PM, Today</string>

</resources>