<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_20">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginTop="21dp"
        android:layout_marginStart="@dimen/spacing_26"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:textColor="@color/colorBlack"
        android:text="@string/cancel_the_order"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginEnd="@dimen/spacing_26"
        android:textColor="@color/colorBlack"
        android:text="@string/cancel_the_order_confirm"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:textColor="@color/colorBlack"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@id/btnYes"
        app:layout_constraintEnd_toStartOf="@id/btnYes" />

    <TextView
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_32"
        android:layout_marginEnd="@dimen/spacing_26"
        android:textColor="@color/colorRed"
        android:text="@string/yes_cancel"
        android:textAllCaps="true"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>