<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_arrow"
        android:padding="10dp"
        android:text="@string/back"
        android:textSize="15sp"
        android:textColor="@color/back"
        android:background="@color/ground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorBlackLight80"/>

    <Button
        android:id="@+id/profile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shape_circle"
        android:drawableTop="@drawable/ic_ring"
        android:drawableEnd="@drawable/ic_vector"
        android:paddingTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/tap"
        android:textStyle="bold"
        android:textColor="@color/colorBlackLight80"
        android:textSize="15dp"/>


</LinearLayout>