<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorBlackLight80"/>

    <ImageView
        android:id="@+id/btnAddPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_circle"
        android:src="@drawable/ic_plus" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/tap"
        android:textStyle="bold"
        android:textColor="@color/colorBlackLight80"
        android:textSize="15dp"/>

    <View
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="34dp"
        android:text="@string/save"
        android:textColor="@color/ground"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:background="@drawable/shape"/>
</LinearLayout>