<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/congratulation"
        android:textColor="@color/colorBlackLight80"
        android:textStyle="bold"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/btnAddPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="65dp"
        android:layout_gravity="center"
        android:src="@drawable/party"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="76dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/success"
        android:textColor="@color/colorBlackLight80"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <View
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/btnLetsGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:text="@string/lets_go"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:background="@drawable/shape"/>

</LinearLayout>