<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ui.SignInActivity"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/spacing_22"
        android:layout_marginStart="@dimen/spacing_20"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="@dimen/text_30"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginEnd="56dp"
        android:text="@string/message"
        android:textSize="@dimen/text_17"
        android:textColor="@color/colorBlackLight80"/>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_32"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnCodeSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing_20"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                android:layout_marginTop="@dimen/spacing_4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MsgErrorText"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textColorHint="@color/colorGreyLight"
                    android:textCursorDrawable="@color/colorBlackLight80"
                    android:textSize="@dimen/text_20"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_18"
        android:layout_marginStart="@dimen/spacing_60"
        android:layout_marginEnd="@dimen/spacing_60"
        android:text="@string/tv"
        android:textSize="@dimen/text_12"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorBlackLight80"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_20"
        android:enabled="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_34"
        android:layout_marginEnd="@dimen/spacing_34"
        android:textAllCaps="false"
        android:textSize="@dimen/text_17"
        android:background="@drawable/selector_btn_60"
        android:text="@string/next"/>

</LinearLayout>
