<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"

    android:layout_gravity="bottom"
    android:background="@drawable/bg_round_bottom_sheet_make_order"

    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/spacing_40"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_28"
        android:layout_marginEnd="@dimen/spacing_5"
        android:layout_gravity="center"
        android:background="@drawable/ic_arrow_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginStart="44dp"
        android:text="@string/order"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:errorEnabled="false">
        <!--app:errorTextAppearance="@style/MsgErrorText"-->

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/my_name"
            android:text="Munara Allison"
            android:imeOptions="actionNext"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorBlackLight80"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:errorEnabled="false">
       <!-- app:errorTextAppearance="@style/MsgErrorText" -->

        <EditText
            android:id="@+id/etSomeWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textShortMessage"
            android:hint="@string/some_words_about_you"
            android:text="I have 5 years expirience. I can do it"
            android:imeOptions="actionNext"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorBlackLight80"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="@dimen/spacing_28"
        app:errorEnabled="false">
        <!--app:errorTextAppearance="@style/MsgErrorText"-->

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/price"
            android:text="50"
            android:imeOptions="actionDone"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="@color/colorBlackLight80"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="21dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_60" />
</LinearLayout>